--- a/lisa-cnn-attack/Pipfile
+++ b/lisa-cnn-attack/Pipfile
@@ -1,12 +1,12 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[packages]
+bash = "*"
+
 [dev-packages]
 
-[packages]
-opencv-python = "*"
-Pillow = "*"
-Keras = "==1.2.2"
-tensorflow-gpu = "==1.4.1"
+[requires]
+python_version = "3.9"
